--- a/SchoolExpress.Infrastructure/packages.config
+++ b/SchoolExpress.Infrastructure/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
 </packages>
