--- a/SchoolExpress.WebService/packages.config
+++ b/SchoolExpress.WebService/packages.config
@@ -1,28 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="2.0.3" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.FileSystems" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="4.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
-  <package id="Unity" version="4.0.1" targetFramework="net452" />
-  <package id="WindowsAzure.Storage" version="8.0.1" targetFramework="net452" />
+  <package id="Unity" version="5.8.6" targetFramework="net452" />
 </packages>
