--- a/SchoolExpress.WebService/packages.config
+++ b/SchoolExpress.WebService/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
@@ -14,11 +13,20 @@
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net452" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.3" targetFramework="net452" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.FileSystems" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.StaticFiles" version="4.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Spatial" version="5.8.3" targetFramework="net452" />
+  <package id="Topshelf" version="4.0.4" targetFramework="net452" />
+  <package id="Topshelf.Owin" version="1.4.39" targetFramework="net452" />
   <package id="Unity" version="5.8.6" targetFramework="net452" />
+  <package id="Unity.Abstractions" version="3.3.0" targetFramework="net452" />
+  <package id="Unity.Interception" version="5.5.1" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net452" />
 </packages>
