--- a/SchoolExpress.Infrastructure/SchoolExpress.Infrastructure.csproj
+++ b/SchoolExpress.Infrastructure/SchoolExpress.Infrastructure.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Configurations\ScheduleDetailConfiguration.cs" />
     <Compile Include="Configurations\UserConfiguration.cs" />
     <Compile Include="DbContexts\SchoolExpressDbContext.cs" />
+    <Compile Include="DbContexts\SchoolExpressIdentityDbContext.cs" />
     <Compile Include="DbContexts\SchoolExpressInitializer.cs" />
     <Compile Include="Helpers\IRepositoryProvider.cs" />
     <Compile Include="Helpers\PredicateBuilder.cs" />
