--- a/SchoolExpress.WebService/wwwroot/package.json
+++ b/SchoolExpress.WebService/wwwroot/package.json
@@ -28,7 +28,8 @@
     "postcss-cssnext": "^3.0.2",
     "serve-static": "^1.13.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "jquery": "^3.3.1"
   },
   "dependencies": {}
 }
