--- a/SchoolExpress.Domain/SchoolExpress.Domain.csproj
+++ b/SchoolExpress.Domain/SchoolExpress.Domain.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="AcademicTerm.cs" />
     <Compile Include="Assignment.cs" />
+    <Compile Include="Audience.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EnrollmentDetail.cs" />
     <Compile Include="IEntity.cs" />
