--- a/SchoolExpress.WebService/packages.config
+++ b/SchoolExpress.WebService/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
@@ -7,6 +8,7 @@
   <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.4" targetFramework="net452" />
@@ -21,14 +23,18 @@
   <package id="Microsoft.Owin.FileSystems" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Hosting" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net452" />
   <package id="Microsoft.Owin.StaticFiles" version="4.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net452" />
   <package id="Topshelf" version="4.0.4" targetFramework="net452" />
   <package id="Topshelf.Owin" version="1.4.39" targetFramework="net452" />
   <package id="Unity" version="5.8.6" targetFramework="net452" />
   <package id="Unity.Abstractions" version="3.3.0" targetFramework="net452" />
-  <package id="Unity.Interception" version="5.5.1" targetFramework="net452" />
+  <package id="Unity.Interception" version="5.5.2" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="9.1.1" targetFramework="net452" />
 </packages>
