Rename JwtAuthorizeModule to CustomJwtAuthorizationProvider class

--- a/SchoolExpress.WebService/SchoolExpress.WebService.csproj
+++ b/SchoolExpress.WebService/SchoolExpress.WebService.csproj
@@ -187,7 +187,7 @@
   <ItemGroup>
     <Compile Include="Filters\AnonymousAuthorizeAttribute.cs" />
     <Compile Include="Utils\HttpActionResult.cs" />
-    <Compile Include="Filters\JwtAuthorizeModule.cs" />
+    <Compile Include="Providers\CustomJwtAuthorizationProvider.cs" />
     <Compile Include="Filters\JwtAuthorizeAttribute.cs" />
     <Compile Include="Handlers\BasicAuthenticationHandler.cs" />
     <Compile Include="Controllers\Api\AcademicTermsApiController.cs" />
@@ -205,7 +205,6 @@
     <Compile Include="Controllers\Api\CourseScheduleDetailsApiController.cs" />
     <Compile Include="Controllers\Api\CourseSchedulesApiController.cs" />
     <Compile Include="Credential.cs" />
-    <Compile Include="Filters\JwtAuthenticationAttribute.cs" />
     <Compile Include="Models\AudienceModel.cs" />
     <Compile Include="Models\UserLoginModel.cs" />
     <Compile Include="Providers\CustomContentTypeProvider.cs" />
@@ -216,7 +215,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CustomOAuthAuthorizationProvider.cs" />
-    <Compile Include="Filters\JwtAuthenticationModule.cs" />
     <Compile Include="Utils\SHA.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UnityConfig.cs" />
