Create colored console adapter

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -27,7 +27,7 @@
   </connectionStrings>
   <appSettings>
     <add key="BaseUri" value="http://localhost:9000/" />
-    <add key="AuthenticationMode" value="JWT" /> <!-- [ NONE | JWT | OAUTH ] -->
+    <add key="AuthenticationMode" value="NONE" /> <!-- [ NONE | JWT | OAUTH ] -->
     <add key="TokenExpiration" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
   </appSettings>
@@ -100,10 +100,12 @@
   </runtime>
   <common>
     <logging>
-      <factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+      <factoryAdapter
+        type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
         <arg key="level" value="DEBUG" />
-        <arg key="showLogName" value="true" />
         <arg key="showDateTime" value="true" />
+        <arg key="showLogName" value="true" />
+        <arg key="showLevel" value="true" />
         <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
       </factoryAdapter>
     </logging>
