--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -14,7 +14,7 @@
     <logging>
       <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
-        <arg key="level" value="Error" />
+        <arg key="level" value="Trace" />
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDataTime" value="true" />
@@ -26,10 +26,11 @@
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
-        <clear/>
-        <add name="AzureDiagnostics" type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
         <remove name="Default" />
+        <clear />
+        <add name="AzureDiagnostics"
+             type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
       </listeners>
     </trace>
   </system.diagnostics>
@@ -41,7 +42,7 @@
   <appSettings>
     <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationMode [ NONE | JWT | OAUTH ] -->
-    <add key="AuthenticationMode" value="NONE" />    
+    <add key="AuthenticationMode" value="NONE" />
     <add key="TokenExpiration" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
   </appSettings>
