--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -14,7 +14,7 @@
     <logging>
       <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
-        <arg key="level" value="Trace" />
+        <arg key="level" value="Debug" />
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDataTime" value="true" />
@@ -26,11 +26,11 @@
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
-        <remove name="Default" />
         <clear />
         <add name="AzureDiagnostics"
              type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
+        <remove name="Default" />
       </listeners>
     </trace>
   </system.diagnostics>
@@ -40,10 +40,9 @@
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="BaseUri" value="http://localhost:9000/" />
-    <!-- AuthenticationMode [ NONE | JWT | OAUTH ] -->
-    <add key="AuthenticationMode" value="NONE" />
-    <add key="TokenExpiration" value="30" />
+    <!-- AuthenticationMode [ NONE | BASIC | JWT | OAUTH ] -->
+    <add key="AuthenticationModes" value="NONE" />
+    <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
   </appSettings>
   <startup>
