Add "Create Certificate" Commands

--- a/SchoolExpress.WebService/App.Release.config
+++ b/SchoolExpress.WebService/App.Release.config
@@ -4,13 +4,13 @@
 <!-- In case configuration is not the root element, replace it with root element in source configuration file -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="BaseUri" value="http://localhost:9000/" xdt:Transform="Insert" />
+    <add key="BaseUri" value="http://127.0.0.1:9000/" xdt:Transform="Replace" xdt:Locator="Match(key)" />
   </appSettings>
   <common>
     <logging>
-      <factoryAdapter>
+      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging" xdt:Transform="SetAttributes">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
-        <arg key="level" value="Error" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
+        <arg key="level" value="Info" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
       </factoryAdapter>
     </logging>
   </common>
