--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -5,14 +5,12 @@
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <common>
     <logging>
-      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
+      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Debug" />
         <arg key="showLevel" value="true" />
@@ -27,30 +25,28 @@
     <trace autoflush="true">
       <listeners>
         <clear />
-        <add name="AzureDiagnostics"
-             type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+        <add name="AzureDiagnostics" type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
         <remove name="Default" />
       </listeners>
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="SchoolExpressConnection"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
+    <add name="SchoolExpressConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <!-- AuthenticationMode [ NONE | BASIC | JWT | OAUTH ] -->
+    <add key="BaseUri" value="https://+:444/" />
+    <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
+    <add key="HttpsRequired" value ="true"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <runtime>
-    <assemblyBinding
-      xmlns="urn:schemas-microsoft-com:asm.v1">
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
@@ -120,8 +116,7 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient"
-                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
