--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -35,12 +35,11 @@
     <add name="SchoolExpressConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="BaseUri" value="https://+:444/" />
+    <add key="BaseUri" value="https://schoolexpress.com:444/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
-    <add key="HttpsRequired" value ="true"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
